manifests/mssql-deploy-with-secret-and-pv.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
  namespace: employee
spec:
  replicas: 1
  selector:
     matchLabels:
       app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      securityContext:
        fsGroup: 10001
      containers:
      - name: mssql
        image: 'mcr.microsoft.com/mssql/server:2017-CU8-ubuntu'
        resources:
          limits:
            memory: 4Gi
            cpu: 1
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: mssql
          mountPath: /var/opt/mssql
      volumes:
      - name: mssql
        persistentVolumeClaim:
          claimName: vol-claim          
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
  namespace: employee
spec:
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
